# Memory-Allocator

./: .gitignore  CMakeLists.txt  README.md
include/: allocator.hpp
src/: allocator.cpp
tests/: CMakeLists.txt  test_allocate.cpp  test_allocate_free.cpp  test_allocator.cpp  test_multiple_allocates.cpp
